sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
   for(i<-0 to lg-2){
   	if(i>i+1){
   		echange(i,i+1)
   	}
   }
}
